--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                       <div>
                         <h2 class="font-bold text-[#FF4240]">Price - $22.00</h2>
                       </div>
-                      <div>
+                      <div class="flex">
                         <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
                         <p class="text-[#13131880] ">Delivery Fee : Free</p>
                       </div>
@@ -213,7 +213,7 @@
                       <div>
                         <h2 class="font-bold text-[#FF4240]">Price - $22.00</h2>
                       </div>
-                      <div>
+                      <div class="flex">
                         <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
                         <p class="text-[#13131880] ">Delivery Fee : Free</p>
                       </div>
@@ -255,7 +255,7 @@
                       <div>
                         <h2 class="font-bold text-[#FF4240]">Price - $22.00</h2>
                       </div>
-                      <div>
+                      <div class="flex">
                         <i class="fa-solid fa-cart-shopping text-[#89898B]"></i>
                         <p class="text-[#13131880] ">Delivery Fee : Free</p>
                       </div>
@@ -301,6 +301,32 @@
                 <h2 class="mt-4 text-center text-xl font-bold">Get In Touch</h2>
               <p class="mt-4 text-[#13131899] text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. <br> Purus urna in sit nullam proin. </p>
               </div>
+              
+            </section>
+
+            <section class="my-24">
+              <div>
+              <div class="bg-[#BCED6D1A] min-w-72">
+                <img src="Images/Group 1171275317.png" alt="">
+                <p class="text-[#404240]">Phone Number :</p>
+                <h1 class="text-xl font-bold"> (+62) 123-321-543</h1>
+              </div>
+              <hr class="my-8">
+              <div class="bg-[#BCED6D1A] min-w-72">
+                <img src="Images/Group 1171275318.png" alt="">
+                <p class="text-[#404240]">Email : </p>
+                <h1 class="text-xl font-bold"> hockeys@support.com</h1>
+              </div>
+              <hr class="my-8">
+              <div class="bg-[#BCED6D1A] min-w-72">
+                <img src="Images/Group 1171275321.png" alt="">
+                <p class="text-[#404240]">Location : 
+                  </p>
+                <h1 class="text-xl font-bold"> 152/1 Mohakhali Wireless Gate</h1>
+              </div>
+            </div>
+
+
             </section>
     </main>
     <footer>
