--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
             <hr class="mt-8">
             <div>
               <div class=" flex grid grid-flow-row justify-center   gap-5 mt-10 lg:grid-flow-col lg:mx-28">
-                <div class="bg-[url('/images/2.png')] bg-no-repeat bg-cover">
+                <div class="bg-[url('./images/2.png')] bg-no-repeat bg-cover">
                   <h1 class="text-xl text-white  pt-16 pl-9">Junior Program</h1>
                   <p class=" text-white  pt-4 pl-9">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                     enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                     <button class="btn btn-primary bg-[#FF4240] text-white ml-8 mb-12">Register Now!</button>
                 </div>
               
-                <div class="bg-[url('/images/3.png')] bg-no-repeat bg-cover">
+                <div class="bg-[url('./images/3.png')] bg-no-repeat bg-cover">
                   <h1 class="text-xl text-white  pt-16 pl-9">Junior Program</h1>
                   <p class=" text-white  pt-4 pl-9">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                     enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="lg:mx-28 mt-6">
-              <div class="bg-[url('/images/4.png')] bg-no-repeat bg-cover">
+              <div class="bg-[url('./images/4.png')] bg-no-repeat bg-cover">
                 <h1 class="text-xl text-white  pt-16 pl-9">Junior Program</h1>
                 <p class=" text-white  pt-4 pl-9">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                   enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
